--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/vjz3qz/ToDoList#readme",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "ejs": "^3.1.8",
     "express": "^4.18.2"
   }
